# 221_329_Safronov

./: CMakeLists.txt  README.md  transactions.csv
include/: addtransactiondialog.h  mainwindow.h  transaction.h
src/: addtransactiondialog.cpp  main.cpp  mainwindow.cpp  transaction.cpp
ui/: mainwindow.ui
